--- a/SourceCode/2023/Nov2023/Navneeth/Task 26/Main.xaml
+++ b/SourceCode/2023/Nov2023/Navneeth/Task 26/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1156,819" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1793.3333333333333,908" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -72,7 +72,7 @@
       <AssemblyReference>UiPath.System.Activities.ViewModels</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="696,748" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Guess the Random Number (State Machine)&#xD;&#xA;The Three logics will be applied to three possible States&#xD;&#xA;Guess Number &gt; Random Number - It should retry if the number is not same&#xD;&#xA;Guess Number&lt;Random Number- it should retry is number is not same&#xD;&#xA;Guess Number = Random - This will be final state" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="696,843.3333333333334" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Int32" Name="random_no" />
       <Variable x:TypeArguments="x:Int32" Name="guess_no" />
@@ -80,9 +80,10 @@
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+        <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <StateMachine InitialState="{x:Reference __ReferenceID2}" DisplayName="State Machine" sap:VirtualizedContainerService.HintSize="634,637" sap2010:WorkflowViewState.IdRef="StateMachine_1">
+    <StateMachine InitialState="{x:Reference __ReferenceID2}" DisplayName="State Machine - Guess the Random Number (State Machine)" sap:VirtualizedContainerService.HintSize="634,637.3333333333334" sap2010:WorkflowViewState.IdRef="StateMachine_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -93,7 +94,7 @@
           <av:PointCollection x:Key="ConnectorLocation">300,77.5 300,107.5 303.3,107.5 303.3,127.5</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <State x:Name="__ReferenceID2" sap2010:Annotation.AnnotationText="generate random number" DisplayName="Generate random number" sap:VirtualizedContainerService.HintSize="134,104" sap2010:WorkflowViewState.IdRef="State_1">
+      <State x:Name="__ReferenceID2" sap2010:Annotation.AnnotationText="generate random number" DisplayName="Generate random number" sap:VirtualizedContainerService.HintSize="134,108" sap2010:WorkflowViewState.IdRef="State_1">
         <State.Entry>
           <Assign sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_1">
             <Assign.To>
@@ -107,7 +108,7 @@
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <av:Point x:Key="ShapeLocation">243,127.5</av:Point>
-            <av:Size x:Key="ShapeSize">134,104</av:Size>
+            <av:Size x:Key="ShapeSize">134,108</av:Size>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
             <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
           </scg:Dictionary>
@@ -119,13 +120,13 @@
           <Transition DisplayName="T1" sap2010:WorkflowViewState.IdRef="Transition_2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:PointCollection x:Key="ConnectorLocation">310,231.5 310,261.5 283.3,261.5 283.3,309</av:PointCollection>
+                <av:PointCollection x:Key="ConnectorLocation">310,235.5 310,265.5 283.3,265.5 283.3,309</av:PointCollection>
                 <x:Int32 x:Key="SrcConnectionPointIndex">39</x:Int32>
                 <x:Int32 x:Key="DestConnectionPointIndex">34</x:Int32>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
             <Transition.To>
-              <State x:Name="__ReferenceID0" sap2010:Annotation.AnnotationText="Guess the random number" DisplayName="Guess the number" sap:VirtualizedContainerService.HintSize="134,104" sap2010:WorkflowViewState.IdRef="State_4">
+              <State x:Name="__ReferenceID0" sap2010:Annotation.AnnotationText="Guess the random number" DisplayName="Guess the number" sap:VirtualizedContainerService.HintSize="134,108" sap2010:WorkflowViewState.IdRef="State_4">
                 <State.Entry>
                   <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="334,239" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Please select number" Title="Guess the number">
                     <ui:InputDialog.Result>
@@ -136,7 +137,7 @@
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <av:Point x:Key="ShapeLocation">223,309</av:Point>
-                    <av:Size x:Key="ShapeSize">134,104</av:Size>
+                    <av:Size x:Key="ShapeSize">134,108</av:Size>
                     <x:Boolean x:Key="IsPinned">False</x:Boolean>
                     <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
                   </scg:Dictionary>
@@ -148,7 +149,7 @@
                   <Transition DisplayName="Try Greater" sap:VirtualizedContainerService.HintSize="450,507" sap2010:WorkflowViewState.IdRef="Transition_3">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:PointCollection x:Key="ConnectorLocation">223,329.8 206.4,329.8 206.4,443 236.4,443 236.4,413</av:PointCollection>
+                        <av:PointCollection x:Key="ConnectorLocation">223,330.6 206.4,330.6 206.4,447 236.4,447 236.4,417</av:PointCollection>
                         <x:Int32 x:Key="SrcConnectionPointIndex">13</x:Int32>
                         <x:Int32 x:Key="DestConnectionPointIndex">7</x:Int32>
                       </scg:Dictionary>
@@ -159,14 +160,12 @@
                     <Transition.Action>
                       <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="334,85" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;Guess number is smaller then random number, try a greater value&quot;]" />
                     </Transition.Action>
-                    <Transition.Condition>
-                      <VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="guess_no&lt;random_no" />
-                    </Transition.Condition>
+                    <Transition.Condition>[guess_no&lt;random_no]</Transition.Condition>
                   </Transition>
                   <Transition DisplayName="Try Smaller" sap:VirtualizedContainerService.HintSize="450,507" sap2010:WorkflowViewState.IdRef="Transition_4">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:PointCollection x:Key="ConnectorLocation">357,329.8 387,329.8 387,443 336.9,443 336.9,413</av:PointCollection>
+                        <av:PointCollection x:Key="ConnectorLocation">357,330.6 387,330.6 387,447 336.9,447 336.9,417</av:PointCollection>
                         <x:Int32 x:Key="SrcConnectionPointIndex">12</x:Int32>
                         <x:Int32 x:Key="DestConnectionPointIndex">67</x:Int32>
                       </scg:Dictionary>
@@ -177,24 +176,22 @@
                     <Transition.Action>
                       <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="334,85" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;Guess number is greater then random number, try a smaller value&quot;]" />
                     </Transition.Action>
-                    <Transition.Condition>
-                      <VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="guess_no&gt;random_no" />
-                    </Transition.Condition>
+                    <Transition.Condition>[guess_no&gt;random_no]</Transition.Condition>
                   </Transition>
                   <Transition DisplayName="Success" sap:VirtualizedContainerService.HintSize="450,507" sap2010:WorkflowViewState.IdRef="Transition_5">
                     <sap:WorkflowViewStateService.ViewState>
                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                        <av:PointCollection x:Key="ConnectorLocation">290,413 290,443 303.3,443 303.3,459</av:PointCollection>
+                        <av:PointCollection x:Key="ConnectorLocation">290,417 290,447 303.3,447 303.3,459</av:PointCollection>
                         <x:Int32 x:Key="SrcConnectionPointIndex">39</x:Int32>
                         <x:Int32 x:Key="DestConnectionPointIndex">34</x:Int32>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
                     <Transition.To>
-                      <State x:Name="__ReferenceID1" DisplayName="Final State" sap:VirtualizedContainerService.HintSize="134,62" sap2010:WorkflowViewState.IdRef="State_5" IsFinal="True">
+                      <State x:Name="__ReferenceID1" DisplayName="Final State" sap:VirtualizedContainerService.HintSize="134,62.666666666666664" sap2010:WorkflowViewState.IdRef="State_5" IsFinal="True">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
                             <av:Point x:Key="ShapeLocation">243,459</av:Point>
-                            <av:Size x:Key="ShapeSize">134,62</av:Size>
+                            <av:Size x:Key="ShapeSize">134,62.666666666666664</av:Size>
                             <x:Boolean x:Key="IsPinned">False</x:Boolean>
                           </scg:Dictionary>
                         </sap:WorkflowViewStateService.ViewState>
@@ -203,9 +200,7 @@
                     <Transition.Action>
                       <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="334,85" sap2010:WorkflowViewState.IdRef="MessageBox_5" Text="[&quot;Congratulations: the system generated number is &quot;+random_no.ToString]" />
                     </Transition.Action>
-                    <Transition.Condition>
-                      <VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="guess_no=random_no" />
-                    </Transition.Condition>
+                    <Transition.Condition>[guess_no=random_no]</Transition.Condition>
                   </Transition>
                 </State.Transitions>
               </State>
